objects/Account.object
<CustomObject>
    <fields>
        <fullName>CF_Total_Combined_Exposure_LOS_TM__c</fullName>
        <description>This field will display total exposure(LOS &amp; TM) on exposure tab.</description>
        <formula>CF_Total_Aggregate_Exposure__c +   CF_Total_Treasury_Exposure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Combined Exposure (LOS &amp; TM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_RDC_Exposure__c</fullName>
        <description>This field has created to store Total RDC Exposure field.</description>
        <label>Total RDC Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Total_Treasury_Exposure__c</fullName>
        <description>This field is an aggregate of treasury exposure fields.</description>
        <formula>CF_Total_ACH_Credit_Exposure__c  +  CF_Total_ACH_Debit_Exposure__c +  CF_Total_RDC_Exposure__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Treasury Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Alerts__c</fullName>
        <label>Treasury Alerts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>ACH Return Rate Monitoring</fullName>
                </value>
                <value>
                    <fullName>Downgraded Credit</fullName>
                </value>
                <value>
                    <fullName>Wages &amp; Garnishments</fullName>
                </value>
                <value>
                    <fullName>Subpoena</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Treasury_Financial_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to capture is a treasury financial account</description>
        <label>Treasury Financial Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Treasury_Review_Status__c</fullName>
        <description>Field to Capture Treasury Review Status</description>
        <label>Treasury Review Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Ready for Treasury Risk Rating</fullName>
                </value>
                <value>
                    <fullName>Risk Rating Complete, TSO Review</fullName>
                </value>
                <value>
                    <fullName>TSO Reviewed</fullName>
                </value>
                <value>
                    <fullName>Client Call Scheduled</fullName>
                </value>
                <value>
                    <fullName>Client Call Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Treasury_Risk_Rating__c</fullName>
        <description>This field is used to capture the most recent &quot;Treasury Risk Rating&quot; value from the associated Treasury Review records</description>
        <label>Treasury Risk Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Trust_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trust Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Financial Institution</fullName>
                    <isActive>false</isActive>
                    <label>Financial Institution</label>
                </value>
                <value>
                    <fullName>Institutional Investor</fullName>
                    <isActive>false</isActive>
                    <label>Institutional Investor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_US_Citizenship_Status__c</fullName>
        <label>US Citizenship Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>U.S. Citizen</label>
                </value>
                <value>
                    <fullName>IA</fullName>
                    <label>Immigrant Alien</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                    <label>U.S. National</label>
                </value>
                <value>
                    <fullName>NR</fullName>
                    <label>Non-Immigrant Alien</label>
                </value>
                <value>
                    <fullName>RA</fullName>
                    <label>Lawful Permanent Resident Alien</label>
                </value>
                <value>
                    <fullName>UA</fullName>
                    <label>Undocumented Alien</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_U_Pay_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field sums the total &quot;Requested ACH Limit&quot; of all U-Pay Portal products on the account</description>
        <label>U-Pay Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_User_Role_Check__c</fullName>
        <description>It is referenced in the filter criteria of the Beneficial Ownership Certification Form form template on Account.</description>
        <formula>OR(IF($UserRole.Name = &apos;Commercial Relationship Manager&apos;, true, false), IF($UserRole.Name = &apos;Comm Loan Admin Assistant&apos;, true, false), IF($UserRole.Name = &apos;Processor&apos;, true, false), IF($UserRole.Name = &apos;Credit Analyst&apos;, true, false), IF($Profile.Name = &apos;nCino System Administrator&apos;, true, false), IF($Profile.Name = &apos;PWC/nCino&apos;, true, false), IF($Profile.Name = &apos;System Administrator&apos;, true, false))</formula>
        <label>User Role Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Watch_List_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the account is a watch list account</description>
        <label>Watch List Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Wire_Transfer_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field sums the total &quot;Corporate Wire Limit&quot; of all Wire Transmission products on the account</description>
        <label>Wire Transfer Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CIF#</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Class_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Class Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E2E_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required by SBA E-Tran</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__AUM__c</fullName>
        <description>Value of client&apos;s financial accounts that are managed by our firm.</description>
        <formula>FinServ__TotalAUMPrimaryOwner__c + FinServ__TotalAUMJointOwner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__BankNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__BorrowingHistory__c</fullName>
        <label>Borrowing History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Limited to No History</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__BorrowingPriorities__c</fullName>
        <label>Borrowing Priorities</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Build Equity</fullName>
                </value>
                <value>
                    <fullName>Debt Consolidation</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Investments</fullName>
                </value>
                <value>
                    <fullName>Large Capital Purchases</fullName>
                </value>
                <value>
                    <fullName>Property Purchase</fullName>
                </value>
                <value>
                    <fullName>Renovations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__BranchCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__BranchName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ClaimsOnHouseholdPolicies__c</fullName>
        <description>The total number of claims that were ever raised for the policies currently owned by the policyholder&apos;s primary household.</description>
        <inlineHelpText>This includes all the claims (irrespective of their current status), including the ones that are settled, as long as the related policy is active.</inlineHelpText>
        <label>Claims on Household Policies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__ClientCategory__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ConversionDateTime__c</fullName>
        <description>Lead conversion Date and Time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Conversion DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__CreditRating__c</fullName>
        <label>Credit Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CreditScore__c</fullName>
        <label>Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__CustomerSegment__c</fullName>
        <label>Customer Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mass Market</fullName>
                </value>
                <value>
                    <fullName>Mass Affluent</fullName>
                </value>
                <value>
                    <fullName>Wealth Accumulation</fullName>
                </value>
                <value>
                    <fullName>Transactional</fullName>
                </value>
                <value>
                    <fullName>Long Term Growth</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Millennial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__CustomerType__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transaction</fullName>
                </value>
                <value>
                    <fullName>Relational</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Investor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__FinancialInterests__c</fullName>
        <label>Financial Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Municipal Bonds</fullName>
                </value>
                <value>
                    <fullName>Fixed Income</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Retirement</fullName>
                </value>
                <value>
                    <fullName>College Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__HouseholdPolicies__c</fullName>
        <description>The total number of policies currently owned by the policyholder&apos;s primary household.</description>
        <inlineHelpText>This is the count of the policies owned by the members in the household. For example, if the Rachel Adam&apos;s primary household has three members, including Rachel, and each of them owns two policies, this field will show a value of 6.</inlineHelpText>
        <label>Household Policies</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__IndividualId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID that relates this individual&apos;s account record to its contact record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Individual ID</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__IndividualType__c</fullName>
        <description>Individual Type</description>
        <label>Individual Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__InsuranceCustomerSince__c</fullName>
        <description>Represents the insurance relationship start date. This field can be used in both B2B, and B2C cases</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Customer Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__InvestmentExperience__c</fullName>
        <description>Client&apos;s investment experience.</description>
        <label>Investment Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Experienced</fullName>
                </value>
                <value>
                    <fullName>Moderately Experienced</fullName>
                </value>
                <value>
                    <fullName>Moderately Inexperienced</fullName>
                </value>
                <value>
                    <fullName>Inexperienced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__InvestmentObjectives__c</fullName>
        <description>Client&apos;s preference for growth versus income investments.</description>
        <label>Investment Objectives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conservative Income</fullName>
                </value>
                <value>
                    <fullName>Income</fullName>
                </value>
                <value>
                    <fullName>Balanced</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>Aggressive Growth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__KYCDate__c</fullName>
        <description>Date when the KYC compliance program was completed for a person</description>
        <encryptionScheme>None</encryptionScheme>
        <label>KYC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__KYCStatus__c</fullName>
        <label>KYC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed - Valid</fullName>
                </value>
                <value>
                    <fullName>Completed - Invalid</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__LastInteraction__c</fullName>
        <description>Date of the last client meeting or call.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LastReview__c</fullName>
        <description>Date of the last client review.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LastTransactionDateJointOwner__c</fullName>
        <description>Joint owner&apos;s last transaction date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Transaction Date - Joint Owner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__LastTransactionDatePrimaryOwner__c</fullName>
        <description>Primary owner&apos;s last transaction date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Transaction Date - Primary Owner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__LastTransactionDate__c</fullName>
        <description>Last transaction date.</description>
        <formula>DATEVALUE(IF(
                AND(
                    ISBLANK(FinServ__LastTransactionDateJointOwner__c),
                    ISBLANK(FinServ__LastTransactionDatePrimaryOwner__c)
                ),
                NULL,
                IF(
                    BLANKVALUE(FinServ__LastTransactionDatePrimaryOwner__c, DATETIMEVALUE(&quot;1900-01-01 00:00:00&quot;)) &gt; BLANKVALUE(FinServ__LastTransactionDateJointOwner__c, DATETIMEVALUE(&quot;1900-01-01 00:00:00&quot;)),
                    FinServ__LastTransactionDatePrimaryOwner__c,
                    FinServ__LastTransactionDateJointOwner__c
                )
            ))</formula>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__LastUsedChannel__c</fullName>
        <label>Last Used Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__LengthOfRelationship__c</fullName>
        <formula>if(And(Month(Today())&gt;= month(FinServ__RelationshipStartDate__c), Day(Today()) &gt;=  Day(FinServ__RelationshipStartDate__c)),
Year(Today())- Year(FinServ__RelationshipStartDate__c) +
(Month(Today())-Month(FinServ__RelationshipStartDate__c))/12,
if(And(month(Today())&lt; month(FinServ__RelationshipStartDate__c), Day(Today())&gt;= Day(FinServ__RelationshipStartDate__c)),
Year(Today())-Year(FinServ__RelationshipStartDate__c)-1 +
(12 - Month(FinServ__RelationshipStartDate__c)+month(Today()))/12,
if(And( month(Today())&lt; month(FinServ__RelationshipStartDate__c), Day(Today())&lt; Day(FinServ__RelationshipStartDate__c)),
(Year(Today())-Year(FinServ__RelationshipStartDate__c)-1) + 
((12 - Month(FinServ__RelationshipStartDate__c)+month(Today())-1))/12,
if(And( month(Today())= month(FinServ__RelationshipStartDate__c), Day(Today())&lt; Day(FinServ__RelationshipStartDate__c)),
(Year(Today())- Year(FinServ__RelationshipStartDate__c)-1) + (11/12),
(Year(Today())- Year(FinServ__RelationshipStartDate__c)) + 
(Month(Today())-Month(FinServ__RelationshipStartDate__c)-1)/12))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Length</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinServ__LifetimeValue__c</fullName>
        <label>Lifetime Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__MarketingSegment__c</fullName>
        <description>Market segments that characterize the client.</description>
        <label>Marketing Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mass Affluent</fullName>
                </value>
                <value>
                    <fullName>High Net Worth</fullName>
                </value>
                <value>
                    <fullName>Female Investor</fullName>
                </value>
                <value>
                    <fullName>Millennial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__NetWorth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__NextInteraction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Interaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__NextReview__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Important Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__PersonalInterests__c</fullName>
        <label>Personal Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cooking</fullName>
                </value>
                <value>
                    <fullName>College Basketball</fullName>
                </value>
                <value>
                    <fullName>Environment</fullName>
                </value>
                <value>
                    <fullName>Hiking</fullName>
                </value>
                <value>
                    <fullName>Biking</fullName>
                </value>
                <value>
                    <fullName>Wine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__PrimaryContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Referrer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Referrals</relationshipLabel>
        <relationshipName>AccountContactReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__ReferredByUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountEmployeeReferrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__RelationshipStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinServ__ReviewFrequency__c</fullName>
        <label>Review Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__RiskTolerance__c</fullName>
        <label>Risk Tolerance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aggressive</fullName>
                </value>
                <value>
                    <fullName>Conservative</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ServiceModel__c</fullName>
        <description>Service level assigned to client.</description>
        <label>Service Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__SourceSystemId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinServ__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Deliquent</fullName>
                </value>
                <value>
                    <fullName>Dormant</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TimeHorizon__c</fullName>
        <label>Time Horizon</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Long Term</fullName>
                </value>
                <value>
                    <fullName>Medium Term</fullName>
                </value>
                <value>
                    <fullName>Short Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__TotalAUMJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total AUM Joint Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalAUMPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total AUM Primary Owner</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalBankDepositsJointOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all banking deposit accounts for which the client is the joint owner.</description>
        <label>Total Bank Deposits Joint Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__TotalBankDepositsPrimaryOwner__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of all banking deposit accounts for which the client is the primary owner.</description>
        <label>Total Bank Deposits Primary Owner</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>